--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <!-- iOS PWA Support -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="NutriTrack">
+    <meta name="apple-mobile-web-app-title" content="NutriHive">
     
     <!-- Microsoft PWA Support -->
     <meta name="msapplication-TileColor" content="#0ea5e9">
